--- a/stats.html
+++ b/stats.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stats</title>
+    <!--Reference to kit that provides extra functionality to <nav> from the youtube tutorial-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!--Link/Connection to the CSS file that holds all aesthetic values (unless manually typed in html as <style>)-->
     <link rel="stylesheet" href="block.css">
+    <!--Javascript file that holds all of the functions necessary to provide calculations necessary for the HTML-->
     <script src="block.js"></script>
 </head>
 
 <body>
+    <!--Navigation for the class: stats-->
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
@@ -27,8 +31,8 @@
             <li><a href="extras.html">Extras</a></li>
         </ul>
     </nav>
+    <!--Section that contains Minecraft Player data in a table from Vanilla High stats-->
     <section class="stats">
-        <!--table that contains mc data from vh stats-->
         <table class="tableData"></table>
         <table id="data" border=5 width="100%">
             <col style="width: 10%">
@@ -36,11 +40,11 @@
             <col style="width: 50%">
             <col style="width: 20%">
             <col style="width: 10%">
-            <th>Rank</th>
-            <th>Type</th>
-            <th>Action</th>
-            <th>Score</th>
-            <th>Symbol</th>
+            <th style="color:white;background-color:black">Rank</th>
+            <th style="color:white;background-color:black">Type</th>
+            <th style="color:white;background-color:black">Action</th>
+            <th style="color:white;background-color:black">Score</th>
+            <th style="color:white;background-color:black">Symbol</th>
             <tbody>
                 <tr>
                     <td>#8</td>
