--- a/extras.html
+++ b/extras.html
@@ -1,3 +1,4 @@
+<!--Seth Christopher-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,8 +53,8 @@
                         </div>
                     </td>
                     <td> <!--Buttons that allow user to push off and the other turns on and vice versa infinitely-->
-                        <button id="startButton" onclick="start()">Start</button>
-                        <button id="stopButton" onclick="stop()">Stop</button>
+                        <button id="startButton" onclick="studentName()">Start</button>
+                        <button id="stopButton" onclick="is()">Stop</button>
                     </td>
                     <td> <!--Array made to provide hostile mob names to the user-->
                         <button onclick="Array()">Which hostile mob is your favorite?</button>
