Added degree objectives to welcome page and removed extra } in the CSS file

--- a/welcome.html
+++ b/welcome.html
@@ -33,6 +33,39 @@
         </ul>
     </nav>
     <section class="welcome">
+        <!--UAT objectives-->
+        <ul>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: aqua; border-radius: 20%;">
+                VIRTUAL REALITY DEGREE OBJECTIVES</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(31, 176, 137); border-radius: 20%;">
+                1. Prototype and complete original virtual / augmented reality applications for multiple platforms
+                utilizing a full project development lifecycle from concept to completion.</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(157, 255, 0); border-radius: 20%;">
+                2. Create and implement immersive user experiences that utilize the interaction approaches unique to
+                virtual / augmented reality hardware and platforms.</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(64, 255, 0); border-radius: 20%;">
+                3. Design and develop simulations that leverage gamification on virtual / augmented reality platforms to
+                enhance the outcomes of non-entertainment applications such as training, medical, therapeutic, military,
+                or learning based environments.</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(255, 149, 0); border-radius: 20%;">
+                4. Create the designs, assets, scripting, and programming needed to effectively realize fully
+                interactive and engaging virtual reality worlds.</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(255, 77, 0); border-radius: 20%;">
+                5. Create, implement, evaluate, and analyze the systems and mechanics utilizing written and verbal
+                communication skills that demonstrate visualizations representing data, real world entities, events, and
+                interactions.</li>
+            <li
+                style="color: black; font-family: Georgia; font-size: medium; background-color: rgb(230, 0, 255); border-radius: 20%;">
+                6. Establish collaboration, mentorship, and professional leadership skills by working with other
+                disciplines to deliver highly polished and completed projects in the virtual / augmented reality space.
+            </li>
+        </ul>
         <!--8 UAT space logos placed as images and then put in a table!-->
         <table class="extraData"></table>
         <table id="extra" border=100 width="100%">
